--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,12 @@
     height: 100px;
     margin: 400px auto 0;
     border: 2px solid black;
+    padding: 30px 65px;
 }
 .d-none {
     display: none;
+}
+#numeri {
+    font-size: 30px;
+    
 }
